# TuplesOctree

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: node.hpp  octree.hpp  point.hpp  tuple.hpp
lib/: README.md
src/: node.cpp  octree.cpp  octreeOrientedPairs.cpp  octreePairs.cpp  octreeTetrahedra.cpp  octreeTriangles.cpp  point.cpp
test/: CMakeLists.txt  README.md  orientedpairs.cpp  pairs.cpp  randompoints.cpp  testtuples.cpp  tetrahedra.cpp  triangles.cpp
